MIT-207: Fix content alignment on articles.

--- a/components/contentBody/contentBody.css
+++ b/components/contentBody/contentBody.css
@@ -1,11 +1,9 @@
-@import 'mixins/index';
-
 .wrapper {
+  @include container-with-bleed;
   display: flex;
   flex-flow: column nowrap;
   font-family: $serif;
   margin: 0 auto;
-  max-width: 1272px; /* @todo put this in a variable */
 
   > * {
     margin: 0 auto;
